<resources>
    <string name="app_name">Navigatour</string>
    <string name="logo_description">Navigatour logo</string>
    <string name="registration_page_title">Welcome to Navigatour, Sign up to Continue</string>
    <string name="login_page_title">Welcome Back! Log In to Continue</string>
    <string name="registration_page_username_hint">Username:</string>
    <string name="registration_page_email_hint">Email:</string>
    <string name="registration_page_password_hint">Password:</string>
    <string name="registration_button_text">Sign Up</string>
    <string name="login_button_text">Log In</string>
    <string name="already_have_account_text"><u>Already have an account?</u></string>
    <string name="does_not_have_account_text"><u>Create an account</u></string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXJhLW8iLCJhIjoiY2xkaGhhYnhmMTdnaDN3cjh4azFqc2QwNyJ9.HOF3rCh-G66AFpjz6al8ew</string>
    <string name="selected_longitude_text"><u>Selected Latitude</u></string>
    <string name="selected_latitude_text"><u>Selected Longitude</u></string>
    <string name="selected_longitude">00.00.0</string>
    <string name="selected_latitude">00.00.0</string>
    <string name="add_coordinate_text">Add Co-ordinate</string>
    <string name="generate_route_text">Generate route</string>
    <string name="steps_text">Directions</string>
    <string name="delete_markers">Delete Markers</string>
    <string name="app_instructions">Help: Select a spot on the map and click the add co-ordinate button to add markers</string>

</resources>