<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/navigatour_logo"
            android:layout_width="82dp"
            android:layout_height="101dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/paper_airplane_png_hd_airplane_flight_paper_paperairplane_paperplane_plane_travel_comments_980" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:orientation="vertical"
        android:padding="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_welcome"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="4sp"
            android:minHeight="48dp"
            android:text="@string/login_page_title"
            android:textColor="#000000"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/registration_page_email_hint"
            android:inputType="textEmailAddress"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:backgroundTint="@android:color/darker_gray"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/registration_page_password_hint"
            android:inputType="textPassword"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:backgroundTint="@android:color/darker_gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:height="30dp"
            android:backgroundTint="#000000"
            android:text="@string/login_button_text"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/does_not_have_account_text"
            android:textSize="13sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>