<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|start"
        android:orientation="vertical"
        android:padding="35dp"
        tools:layout_editor_absoluteX="-14dp"
        tools:layout_editor_absoluteY="61dp">

        <ImageView
            android:id="@+id/navigatour_logo"
            android:layout_width="82dp"
            android:layout_height="101dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/paper_airplane_png_hd_airplane_flight_paper_paperairplane_paperplane_plane_travel_comments_980" />

        <TextView
            android:id="@+id/registration_welcome"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="4sp"
            android:text="@string/registration_page_title"
            android:textColor="#000000"
            android:textSize="19sp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/registration_username"
            android:layout_width="303dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:autofillHints="name"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/registration_page_username_hint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/registration_email"
            android:layout_width="305dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/registration_page_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/registration_password"
            android:layout_width="305dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:height="50dp"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/registration_page_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>