<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toTopOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </LinearLayout>-->

    <com.mapbox.maps.MapView
        android:id="@+id/mapViewArea"
        android:layout_width="409dp"
        android:layout_height="416dp"
        android:layout_marginBottom="30dp"
        android:tag="mapViewArea"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapbox_cameraTargetLat="40.7128"
        app:mapbox_cameraTargetLng="-74.0060"
        app:mapbox_cameraZoom="9.0">

    </com.mapbox.maps.MapView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="410dp"
        android:layout_height="311dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapViewArea">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal"
            android:paddingStart="20sp"
            android:paddingEnd="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selectedLongText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/selected_latitude_text"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/selectedLong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/selected_latitude"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/selectedLatText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/selected_longitude_text"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/selectedLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/selected_longitude"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addCoord"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:backgroundTint="#000000"
                android:text="@string/add_coordinate_text"
                android:textAlignment="center"
                android:textSize="12sp"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/generateRoute"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:backgroundTint="#000000"
                android:text="@string/generate_route_text"
                android:textAlignment="center"
                android:textSize="12sp"
                app:cornerRadius="4dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="323dp"
            android:layout_height="30dp"
            android:layout_marginTop="25sp"
            android:text="@string/app_instructions"
            android:textAlignment="center"
            android:textSize="11sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>